--- a/aemps_playground.ipynb
+++ b/aemps_playground.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,10 +39,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "link=\"https://cima.aemps.es/cima/publico/detalle.html?nregistro=1211535005\"\n",
+    "x=re.search(r\"\\d+\",link)\n",
+    "type(x[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "url='https://www.aemps.gob.es/?s=pema'\n",
+    "sopa=BeautifulSoup(requests.get(url,timeout=20).content, 'html.parser')\n",
+    "meds=sopa.find_all('article',{'class': \"post type-post status-publish format-standard has-post-thumbnail hentry entry\"})\n",
+    "\n",
+    "for med in meds:\n",
+    "    medicina=med.find('a')\n",
+    "    nombre=medicina.text\n",
+    "    link=medicina['href']\n",
+    "    code=re.search(r\"\\d+\",link)[0]\n",
+    "    img=med.find('img')['src']\n",
+    "\n",
+    "\n",
+    "print(len(img))\n",
+    "print(img)\n",
+    "print(0)"
+   ]
   }
  ],
  "metadata": {
